Switch to generated EJBs, new frontend in progress

--- a/RemoteDiaryWebTier/src/main/webapp/index.xhtml
+++ b/RemoteDiaryWebTier/src/main/webapp/index.xhtml
@@ -7,7 +7,7 @@
 
     <ui:composition template="/template.xhtml">
         <ui:define name="title">
-            <h:outputText value="Hello from remote diary application"></h:outputText>
+            <h:outputText style="vertical-align: central" value="Hello from remote diary application"></h:outputText>
         </ui:define>
         
         <ui:define name="body">
